@@ -28,4 +28,4 @@ set(SRC
 source_group("" FILES ${SRC})
 
 #build only object files that can be linked into a d static library
-add_library(dsfmlc-audio STATIC ${SRC})
+add_library(dsfmlc-audio OBJECT ${SRC})
