@@ -11,6 +11,5 @@ set(SRC
     ${INCROOT}/Export.h
 )
 
-
 #build only object files that can be linked into a d static library
-add_library(dsfmlc-system STATIC ${SRC})
+add_library(dsfmlc-system OBJECT ${SRC})
